<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheDream</string>
    <string name="action_settings">Налаштування</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_details">Деталі</string>
    <string name="title_activity_profile">Профіль</string>

    <string name="title_section_dreams">Всі мрії</string>
    <string name="title_section_favo_dreams">Обрані мрії</string>
    <string name="title_section_faq">FAQ</string>
    <string name="title_section_contacts">Контакти</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">407407372773761</string>
    <string name="vkontakte_app_id">4833102</string>

    <string name="content_description">#</string>
    <string name="sample_dream_title">Максі-сингл \"21 грам\" гурту \"Сонце в кишені\"</string>
    <string name="sample_count_of_likes">75</string>
    <string name="sample_user_name">Соломія Вагнер</string>
    <string name="estimate_button">Кошторис</string>
    <string name="members_button">Учасники</string>
    <string name="financial_support_btn">Підтримати фінансово</string>
    <string name="equip_support_btn">Надати обладнання</string>
    <string name="work_support_btn">Провести роботи</string>
    <string name="action_add_to_favorite">Додати мрію до обраних</string>
    <string name="logout_button_text">Вийти</string>
    
    <string name="dialog_no_internet_message">Відсутній звя\u0027зок з інтернетом. Перевірте підключення.</string>
    <string name="dialog_soc_network_connection_failure">При підключенні до соціальної мережі виникла помилка.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="login">Вхід</string>
    <string name="action_delete_all_favorites">Видалити всі  обрні мрії</string>
    <string name="no_fav_dreams">Список улюблених мрій порожній</string>
    <string name="dialog_delete_all_fav_title">Видалення улюблених мрій</string>
    <string name="dialog_delete_all_fav_message">Ви впевнені, що хочете видалити всі улюблені мрії?</string>
    <string name="fin_support_title">Фінансово</string>
    <string name="equip_support_title">Обладнанням</string>
    <string name="work_support_title">Роботою</string>
    <string name="other_support_title">Іншим</string>
    <string name="support_title">Підтримали</string>
    <string name="deleted_dream_message">Мрію було видалено зі списку улюблених</string>
    <string name="added_dream_message">Мрію було додано до улюблених</string>
    <string name="columns_picker_title">Вигляд</string>
    <string name="chose_real_dream_message">Щоб додати мрію до улюблених, перейдіть до розділу \"Всі мрії\"</string>
    <string name="dialog_pick_columns_number">Оберіть вигляд меню</string>
    <string name="no_connection">Відсутнє з\'єднання підключення до Інтернет. Можливо, варто спробувати пізніше ;)</string>

</resources>
