<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context="org.chedream.android.fragments.NavigationDrawerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="24sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/txt_all_dreams"
            style="@style/drawer_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/drawer_all_icon"
            android:drawableStart="@drawable/drawer_all_icon"
            android:text="@string/title_section_dreams" />

        <TextView
            android:id="@+id/txt_favo_dreams"
            style="@style/drawer_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/drawer_favo_icon"
            android:drawableStart="@drawable/drawer_favo_icon"
            android:text="@string/title_section_favo_dreams" />

        <TextView
            android:id="@+id/txt_faq"
            style="@style/drawer_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/drawer_faq_icon"
            android:drawableStart="@drawable/drawer_faq_icon"
            android:text="@string/title_section_faq" />

        <TextView
            android:id="@+id/txt_contacts"
            style="@style/drawer_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/drawer_contacts_icon"
            android:drawableStart="@drawable/drawer_contacts_icon"
            android:text="@string/title_section_contacts" />
    </LinearLayout>
</ScrollView>
