<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/support_text_padding_title"
    android:paddingRight="@dimen/support_text_padding_title">

    <TextView
        android:id="@+id/fin_support_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fin_support_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fin_contr_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:padding="5dp" />

        <TextView
            android:id="@+id/fin_contr_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/equip_support_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equip_support_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/equip_contr_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:padding="5dp" />

        <TextView
            android:id="@+id/equip_contr_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/work_support_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_support_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/work_contr_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:padding="5dp" />

        <TextView
            android:id="@+id/work_contr_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/other_support_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_support_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/other_contr_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:padding="5dp" />

        <TextView
            android:id="@+id/other_contr_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:padding="5dp" />
    </LinearLayout>
</LinearLayout>